Westminster spelling mistake fix

--- a/pages/learn.html
+++ b/pages/learn.html
@@ -406,7 +406,7 @@
       <!-------------------------------- WEST MINSTER UNIVERSITY -------------------------------->
       <section class="d-none d-lg-flex section-margin-top">
         <article>
-          <h3 class="display-3">West Minster University</h3>
+          <h3 class="display-3">Westminster University</h3>
           <p class="lead">
             &quot;We are Westminster College. We&rsquo;re closer than you think,
             nestled within the charming town of New Wilmington, just one hour
@@ -432,17 +432,17 @@
         </aside>
       </section>
 
-      <!-- WEST MINSTER UNIVERSITY MOBILE -->
+      <!-- WESTMINSTER UNIVERSITY MOBILE -->
       <section class="d-lg-none section-margin-top">
         <aside>
           <img
             class="border shadow-lg"
             src="../images/schools/westminster.png"
-            alt="West Minster University"
+            alt="Westminster University"
           />
         </aside>
         <article class="pt-3">
-          <h3 class="display-3">West Minster University</h3>
+          <h3 class="display-3">Westminster University</h3>
           <p class="lead">
             &quot;We are Westminster College. We&rsquo;re closer than you think,
             nestled within the charming town of New Wilmington, just one hour
@@ -453,7 +453,7 @@
           <a
             href="https://www.westminster.edu/"
             class="btn btn-success btn-lg"
-            alt="A link to West Minster University's Website"
+            alt="A link to Westminster University's Website"
           >
             View College Site
           </a>
