Added school section to live.html

--- a/pages/live.html
+++ b/pages/live.html
@@ -379,6 +379,7 @@
         </div>
       </section>
 
+      <!----------------------------------------------- HOSPITALS SECTION ----------------------------------------------->
       <section class="shadow-lg container rounded">
         <div class="h2-header-block">
           <h2 class="display-2 text-center pt-4">Hospitals</h2>
@@ -395,7 +396,7 @@
             alt=""
             class="img-fluid shadow-lg mx-5 my-5 border"
           />
-          <article class="d-flex flex-wrap justify-content-center">
+          <article class="d-flex flex-wrap justify-content-center pb-5">
             <div class="card m-2" style="width: 18rem">
               <div class="card-body">
                 <h5 class="card-title">Grove City Medical Center</h5>
@@ -843,45 +844,203 @@
             </div>
           </article>
         </div>
-        <!-- <div class="d-flex justify-content-around py-5">
-          <div class="d-flex flex-column justify-content-center w-50">
-            <img
-              src="../images/hospital/upmc-horizon-shenango-valley-desktop-banner.jpg"
-              alt=""
-              class="img-fluid h-auto shadow-lg border"
-            />
-          </div>
-          <div class="d-flex flex-column justify-content-start">
-            <p>test</p>
-            <p>test</p>
-            <p>test</p>
-            <p>test</p>
-            <p>test</p>
-            <p>test</p>
-            <p>test</p>
-            <p>test</p>
-            <p>test</p>
-            <p>test</p>
-            <p>test</p>
-            <p>test</p>
-            <p>test</p>
-            <p>test</p>
-            <p>test</p>
-            <p>test</p>
-            <p>test</p>
-            <p>test</p>
-            <p>test</p>
-            <p>test</p>
-            <p>test</p>
-            <p>test</p>
-            <p>test</p>
-            <p>test</p>
-            <p>test</p>
-            <p>test</p>
-            <p>test</p>
-            <p>test</p>
-          </div>
-        </div> -->
+      </section>
+
+      <!----------------------------------------------- SCHOOL DISTRICTS SECTION ----------------------------------------------->
+      <section class="shadow-lg container rounded">
+        <div class="h2-header-block">
+          <h2 class="display-2 text-center pt-4">School Districts</h2>
+          <p class="lead text-center ch-60 pb-4">
+            One of the key reasons people choose to move to Mercer County: this
+            is a great place to raise a family. Naturally, we are home to many
+            school districts.
+          </p>
+        </div>
+
+        <div class="d-flex flex-column align-items-center">
+          <img
+            src="../images/schools/sharpsville.jpg"
+            alt=""
+            class="img-fluid shadow-lg mx-5 my-5 border"
+          />
+          <article class="d-flex flex-wrap justify-content-center pb-4">
+            <div class="card m-2" style="width: 18rem">
+              <div class="card-body">
+                <h5 class="card-title">Commodore Perry School District</h5>
+                <!-- <p class="card-text">
+                  66% of patients would definitely recommend.
+                </p> -->
+              </div>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item">3002 Perry Highway</li>
+                <li class="list-group-item">
+                  Mercer County, Pennsylvania, 16103
+                </li>
+              </ul>
+              <div class="card-body d-flex align-items-center">
+                <a href="https://cppanthers.org/" class="card-link"
+                  >View School's Website</a
+                >
+              </div>
+            </div>
+            <div class="card m-2" style="width: 18rem">
+              <div class="card-body">
+                <h5 class="card-title">Greenville Area School District</h5>
+              </div>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item">9 Donation Rd</li>
+                <li class="list-group-item">Greenville, PA</li>
+              </ul>
+              <div class="card-body d-flex align-items-center">
+                <a href="http://www.greenville.k12.pa.us/" class="card-link"
+                  >View School's Website</a
+                >
+              </div>
+            </div>
+            <div class="card m-2" style="width: 18rem">
+              <div class="card-body">
+                <h5 class="card-title">Hermitage School District</h5>
+              </div>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item">411 N Hermitage Road</li>
+                <li class="list-group-item">Hermitage, PA</li>
+              </ul>
+              <div class="card-body d-flex align-items-center">
+                <a href="https://hermitagesd.net/" class="card-link"
+                  >View School's Website</a
+                >
+              </div>
+            </div>
+            <div class="card m-2" style="width: 18rem">
+              <div class="card-body">
+                <h5 class="card-title">Reynolds School District</h5>
+              </div>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item">531 Reynolds Rd</li>
+                <li class="list-group-item">Greenville, PA</li>
+              </ul>
+              <div class="card-body d-flex align-items-center">
+                <a href="https://www.reynolds.k12.pa.us/" class="card-link"
+                  >View School's Website</a
+                >
+              </div>
+            </div>
+            <div class="card m-2" style="width: 18rem">
+              <div class="card-body">
+                <h5 class="card-title">Lakeview School District</h5>
+              </div>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item">2482 Mercer St</li>
+                <li class="list-group-item">Stoneboro, PA</li>
+              </ul>
+              <div class="card-body d-flex align-items-center">
+                <a href="https://www.lakeview.k12.pa.us/" class="card-link"
+                  >View School's Website</a
+                >
+              </div>
+            </div>
+            <div class="card m-2" style="width: 18rem">
+              <div class="card-body">
+                <h5 class="card-title">Sharpsville Area School District</h5>
+              </div>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item">1 Blue Devil Way</li>
+                <li class="list-group-item">Sharpsville, PA 16150</li>
+              </ul>
+              <div class="card-body d-flex align-items-center">
+                <a href="https://www.sharpsville.k12.pa.us/" class="card-link"
+                  >View School's Website</a
+                >
+              </div>
+            </div>
+            <div class="card m-2" style="width: 18rem">
+              <div class="card-body">
+                <h5 class="card-title">Farrell Area School District</h5>
+              </div>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item">1600 Roemer Blvd</li>
+                <li class="list-group-item">Farrell, PA 16121</li>
+              </ul>
+              <div class="card-body d-flex align-items-center">
+                <a href="https://www.farrellareaschools.com/" class="card-link"
+                  >View School's Website</a
+                >
+              </div>
+            </div>
+            <div class="card m-2" style="width: 18rem">
+              <div class="card-body">
+                <h5 class="card-title">Grove City Area School District</h5>
+              </div>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item">511 Highland Ave</li>
+                <li class="list-group-item">Grove City</li>
+              </ul>
+              <div class="card-body d-flex align-items-center">
+                <a
+                  href="https://www.grovecity.k12.pa.us/domain/50"
+                  class="card-link"
+                  >View School's Website</a
+                >
+              </div>
+            </div>
+            <div class="card m-2" style="width: 18rem">
+              <div class="card-body">
+                <h5 class="card-title">Jamestown Area School District</h5>
+              </div>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item">204 Shenango Street</li>
+                <li class="list-group-item">Jamestown, Pa 16134</li>
+              </ul>
+              <div class="card-body d-flex align-items-center">
+                <a href="https://www.jamestown.k12.pa.us/" class="card-link"
+                  >View School's Website</a
+                >
+              </div>
+            </div>
+            <div class="card m-2" style="width: 18rem">
+              <div class="card-body">
+                <h5 class="card-title">Mercer Area School District</h5>
+              </div>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item">Mercer</li>
+                <li class="list-group-item">PA</li>
+              </ul>
+              <div class="card-body d-flex align-items-center">
+                <a href="https://www.mercer.k12.pa.us/" class="card-link"
+                  >View School's Website</a
+                >
+              </div>
+            </div>
+            <div class="card m-2" style="width: 18rem">
+              <div class="card-body">
+                <h5 class="card-title">Sharon City School District</h5>
+              </div>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item">215 Forker Blvd</li>
+                <li class="list-group-item">Sharon</li>
+              </ul>
+              <div class="card-body d-flex align-items-center">
+                <a href="https://www.sharon.k12.pa.us/" class="card-link"
+                  >View School's Website</a
+                >
+              </div>
+            </div>
+            <div class="card m-2" style="width: 18rem">
+              <div class="card-body">
+                <h5 class="card-title">West Middlesex Area School</h5>
+              </div>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item">3591 Sharon Rd</li>
+                <li class="list-group-item">West Middlesex, PA 16159</li>
+              </ul>
+              <div class="card-body d-flex align-items-center">
+                <a href="https://wmasd.k12.pa.us/" class="card-link"
+                  >View School's Website</a
+                >
+              </div>
+            </div>
+          </article>
+        </div>
       </section>
     </main>
 
