Added header/nav to play.html and relevant styles/markup

--- a/index.html
+++ b/index.html
@@ -278,7 +278,11 @@
                 accusantium delectus error consequatur nulla et.
               </p>
               <div class="amenities-scrollIn scrollIn">
-                <a id="amenities-button" class="btn btn-background-slide">
+                <a
+                  id="amenities-button"
+                  class="btn btn-background-slide"
+                  href="./pages/play.html"
+                >
                   Click To Learn More
                   <i class="gg-arrow-right d-inline-block"></i>
                   <div
@@ -403,7 +407,7 @@
                   >
                 </li>
                 <li>
-                  <a class="footer-list-item" href="#"
+                  <a class="footer-list-item" href="./pages/play.html"
                     >Play <span>&gt;</span></a
                   >
                 </li>
@@ -521,7 +525,7 @@
                   >
                 </li>
                 <li class="scrollIn footer-anchor-nav-scrollIn">
-                  <a class="footer-list-item" href="#"
+                  <a class="footer-list-item" href="./pages/play.html"
                     >Play <span>&gt;</span></a
                   >
                 </li>
