--- a/pages/learn.html
+++ b/pages/learn.html
@@ -146,11 +146,11 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./pages/play.html">Play</a>
+              <a class="nav-link" href="./play.html">Play</a>
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="./pages/about.html">About</a>
+              <a class="nav-link" href="./about.html">About</a>
             </li>
           </ul>
         </div>
