--- a/pages/work.html
+++ b/pages/work.html
@@ -144,11 +144,11 @@
               <a class="nav-link" href="./learn.html">Learn</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./pages/play.html">Play</a>
+              <a class="nav-link" href="./play.html">Play</a>
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="./pages/about.html">About</a>
+              <a class="nav-link" href="./about.html">About</a>
             </li>
           </ul>
         </div>
