play.html init layout of <main> content

--- a/pages/play.html
+++ b/pages/play.html
@@ -166,11 +166,71 @@
 
       <div class="container">
         <p class="lead display-6">
-          Outside in the water in the rain woo boy golly
+          From Our Nationally Renowned Parks, To Our International Golf
+          Competitions, Mercer County Has a Little Bit of Everything
         </p>
       </div>
     </header>
     <!--------------------- END HEADER --------------------->
+    <main>
+      <!-- BUHL PARK -->
+      <section id="test" class="container-fluid row">
+        <article
+          class="col-md-6 text-center d-flex flex-column align-items-center justify-content-center"
+        >
+          <h2 class="display-2 pb-2">Buhl Park</h2>
+          <h3 class="display-6 pb-4">
+            Building A Healthy, Happy & Connected Community Since 1915
+          </h3>
+          <p class="lead pb-4">
+            "Fulfilling the Buhl legacy by providing recreation, education, and
+            entertainment while promoting a healthy lifestyle and thriving
+            environment."
+          </p>
+        </article>
+        <aside
+          class="col-md-6 text-center d-flex flex-column align-items-center justify-content-center px-0 shadow-lg"
+        >
+          <img
+            src="../images/play/buhl_disc_golf.png"
+            alt=""
+            class="img-fluid section-images"
+          />
+        </aside>
+      </section>
+
+      <!-- GROVE CITY OUTLETS -->
+      <section id="test" class="container-fluid row">
+        <aside
+          class="col-md-6 text-center d-flex flex-column align-items-center justify-content-center px-0 shadow-lg mobile-padding"
+        >
+          <img
+            src="../images/play/grove-city-outlets.jpg"
+            alt=""
+            class="img-fluid"
+          />
+        </aside>
+        <article
+          class="col-md-6 text-center d-flex flex-column align-items-center justify-content-center"
+        >
+          <h2 class="display-2 pb-2">Grove City Premium Outlets</h2>
+          <!-- <h3 class="display-6 pb-4">
+            Building A Healthy, Happy & Connected Community Since 1915
+          </h3> -->
+          <p class="lead pb-4">
+            "Grove City Premium Outlets is western Pennsylvania's premiere
+            shopping destination with over 120 of the hottest brand name stores
+            including kate spade new york, Coach, Michael Kors, The North Face,
+            Under Armour, Vera Bradley and J. Crew Factory Store. The open air
+            center is easily accessible located just off I-79, 3 miles south of
+            I-80 serving Pittsburgh, Youngstown and Erie. Shoppers realize
+            25-65% savings off everyday retail and visitors to the area enjoy
+            the savings offered by Pennsylvania's tax-free status on most
+            clothing and shoes."
+          </p>
+        </article>
+      </section>
+    </main>
     <script src="../js/bootstrap.bundle.js" async defer></script>
     <script src=""></script>
   </body>
